[package]
name = "tmn_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }

[build]
target = "wasm32-unknown-unknown"
